Cover all build aspects with imake+automake
"make dist" tarballs can now be built with imake.
Build, but do not install rhd_conntest by default (am+imake).

--- a/RadeonHD.tmpl
+++ b/RadeonHD.tmpl
@@ -10,5 +10,11 @@ PACKAGE_VERSION_PATCHLEVEL = `$(VER_GREP) | $(VER_SED) | $(VER_CUT) 3`
 
 PACKAGE_NAME               = xf86-video-radeonhd
 
+RHD_VERSION_DEFINES = \
+           -DPACKAGE_VERSION="\"$(PACKAGE_VERSION)\"" \
+           -DPACKAGE_VERSION_MAJOR="$(PACKAGE_VERSION_MAJOR)" \
+           -DPACKAGE_VERSION_MINOR="$(PACKAGE_VERSION_MINOR)" \
+           -DPACKAGE_VERSION_PATCHLEVEL="$(PACKAGE_VERSION_PATCHLEVEL)"
+
 /* vim: syntax=make
  */
